# learn

arduino/sketch_jun14a/starter_kit/: project_hyperdrive.ino
c++/accelerated-cpp/chapter_01/: 1.1.cc  1.1.cpp  1.3.cpp  1.4.cpp  1.5.cc  1.6.cc  Makefile  helloCard.cpp  helloWorld.cpp  helloYou.cpp
c++/accelerated-cpp/chapter_02/: asymmetricPadding.cpp  cardNoFrame-2-1.cpp  countdown-2-7.cpp  customSize.cpp  explainAllStd-2-10.cpp  helloCard.cpp  isLarger-2-9.cpp  productRange-2-8.cpp  singleSpace.cpp  whatDoesThisCodeDo-2-6.cc
c++/accelerated-cpp/chapter_03/: compute_grades.cpp  keepAllValues-3-1.txt  longest_shortest-3-4.cc  quartiles-3-2.cpp  undefined_compute_grades-3-6.cpp  unique_word_count-3-3.cpp  vector_compute_grades.cc
c++/accelerated-cpp/chapter_04/: function_compute_grades.cc  function_compute_grades.cpp  grade_many_students.cpp
c/21stCenturyC/: CMakeLists.txt  dynamic.c  erf.c  gsl_erf.c  stddev_bugged.c
c/21stCenturyC/cmake/: FindReadline.cmake
c/cTheHardWay/: Makefile  ex1.c  ex3.c  ex7.c  ex8.c  stripped-ex1.c
c/codesdopeC/: 1.1.c  1.2.c  1.3.c  2.1.c  2.3.c  2.4.c  3.4.c
cmake/offical-tutorial/: .gitignore  CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
cmake/offical-tutorial/MathFunctions/: CMakeLists.txt  MakeTable  MakeTable.cpp  mysqrt.cpp
codesdopeC/: 1.4.c  2.2.c
cpp/: .gitignore  README.md
cpp/accelerated-cpp/: CMakeLists.txt
cpp/accelerated-cpp/chapter_01/: CMakeLists.txt
cpp/accelerated-cpp/chapter_02/: CMakeLists.txt  explainAllStd-2-10.cc  starShapes-2-5.cc
cpp/accelerated-cpp/chapter_03/: CMakeLists.txt  compute_many_grades-3-5.cc
cpp/accelerated-cpp/chapter_04/: CMakeLists.txt  Student_info-4-6.cc  Student_info-4-6.h  Student_info.cc  Student_info.h  calculate_squares-4-2.cc  calculate_squares-4-3.cc  calculate_squares-4-4.cc  find_average-4-7.cc  grade-4-6.cc  grade-4-6.h  grade.cc  grade.h  grade_split_files-4-6.cc  grade_split_files.cc  infer_return-4-8.txt  median.cc  median.h  mixed_types-4-1.txt  read_words-4-5.cc  read_words-4-5.h  word_count-4-5.cc  word_frequency-4-5.cc
cpp/accelerated-cpp/chapter_05/: CMakeLists.txt  Student_info.cc  Student_info.h  concat.cc  concat.h  frame.cc  frame.h  grade.cc  grade.h  max_width.cc  max_width.h  split.cc  split.h
learncpp/: add.h  main.cpp  next.cpp  nub_io.cpp
opengl/: .gitignore  CMakeLists.txt
opengl/glad-test/: test.cpp
opengl/glfw-test/: test.cpp
web/components/: app-drawer.html  index.html  main.css
