cmake_minimum_required(VERSION 3.2)
project(Accelerated_Cpp_Ch_01 LANGUAGES CXX)
add_executable(1.1 1.1.cc)
add_executable(1.3 1.3.cc)
add_executable(1.4 1.4.cc)
add_executable(1.5 1.5.cc)
add_executable(1.6 1.6.cc)
add_executable(helloCard helloCard.cc)
add_executable(helloWorld helloWorld.cc)
add_executable(helloYou helloYou.cc)
