cmake_minimum_required(VERSION 3.2)
project(Accelerated_Cpp_Ch_02 LANGUAGES CXX)
add_executable(helloCard-2-0 helloCard-2-0.cc)
add_executable(cardNoFrame-2-1 cardNoFrame-2-1.cc)
add_executable(asymmetricPadding-2-2 asymmetricPadding-2-2.cc)
add_executable(customSize-2-3 customSize-2-3.cc)
add_executable(singleSpace-2-4 singleSpace-2-4.cc)
add_executable(starShapes-2-5 starShapes-2-5.cc)
add_executable(whatDoesThisCodeDo-2-6 whatDoesThisCodeDo-2-6.cc)
add_executable(countdown-2-7 countdown-2-7.cc)
add_executable(productRange-2-8 productRange-2-8.cc)
add_executable(isLarger-2-9 isLarger-2-9.cc)
add_executable(explainAllStd-2-10 explainAllStd-2-10.cc)
