cmake_minimum_required(VERSION 3.2)
project(Accelerated_Cpp_Ch_03 LANGUAGES CXX)

add_executable(compute_grades compute_grades.cc)
add_executable(vector_compute_grades vector_compute_grades.cc)

add_executable(quartiles-3-2 quartiles-3-2.cc)
add_executable(unique_word_count-3-3 unique_word_count-3-3.cc)
add_executable(longest_shortest-3-4 longest_shortest-3-4.cc)
add_executable(compute_many_grades-3-5 compute_many_grades-3-5.cc)
add_executable(undefined_compute_grades-3-6 undefined_compute_grades-3-6.cc)
